# Tactics-game

./: .gitignore  :w  CMakeLists.txt  README.md  TacticsGame  build.sh  compiler_flags.txt
.cache/clangd/index/: animation.hpp.815B276298ADFFF9.idx  animation_item_used.cpp.CB121AD105085C0F.idx  animation_text.cpp.F719A324D685F8F5.idx  animation_text.hpp.A3BE0D47759F868F.idx  animator.cpp.67E641B65D2B68F7.idx  animator.hpp.2F1241391B547F75.idx  asset_manager.cpp.2232A67B54648622.idx  asset_manager.hpp.00F7888318263448.idx  battle_lua.cpp.54EA5DC4AC47013E.idx  battle_lua.hpp.048571473CFB578F.idx  board.cpp.7AA1E664096B01EE.idx  board.hpp.2F96790B43886B66.idx  command.hpp.7EC34DF080081575.idx  command_attack_unit.cpp.7C537A024E819B30.idx  command_attack_unit.hpp.2D2E72950146644A.idx  command_move_unit.cpp.360962F42E024B34.idx  command_move_unit.hpp.14EC0B96E6A19743.idx  commander.cpp.F7D4F3BC7836FC9B.idx  commander.hpp.036D4BE5272DC081.idx  cursor.cpp.544AA4BEF663D245.idx  cursor.hpp.3B5B8EF308141508.idx  enums.hpp.5384A03F30B00EE4.idx  game.cpp.2155C570E98BAD0E.idx  game.hpp.45A7B62D9544904E.idx  globals.hpp.B428CFAC63AC9085.idx  lapi.c.CF03F83AC888BD1A.idx  lapi.h.DCD2104EB7BC298A.idx  lauxlib.c.AE1E5F9F099CAF14.idx  lauxlib.h.6FCADCB1C84EDA3D.idx  lbaselib.c.5AC005CC6ED22B31.idx  lcode.c.3FA6ACCB311E6330.idx  lcode.h.0FC8B2A712D6B846.idx  lcorolib.c.1A21EFB2E527A60D.idx  lctype.c.3F4ED88CA1818ACA.idx  lctype.h.73A3801E5802DD65.idx  ldblib.c.5CB30458ABFDD32B.idx  ldebug.c.5D08E6469D104B98.idx  ldebug.h.B4A126395633EE28.idx  ldo.c.1918DE0B7C0501BD.idx  ldo.h.9982CC7C223109CC.idx  (+73 more)
cmake/: FindSDL2_image.cmake
data/: LUA_API.md  README.md  battle_includes.lua  config.lua  fn.lua  unit_classes.lua  weapons.lua
data/items/: potions.lua  sequences.lua  weapon_axes.lua  weapon_bows.lua  weapon_spears.lua  weapon_swords.lua
include/: animation.hpp  animation_effect.hpp  animation_text.hpp  animator.hpp  asset_manager.hpp  battle_lua.hpp  command_attack_unit.hpp  cursor.hpp  enums.hpp  game.hpp  globals.hpp  item.hpp  scene.hpp  scene_battle.hpp  scene_main_menu.hpp  scene_manager.hpp  struct_item.hpp  struct_stats.hpp  team.hpp  turn_player.hpp  ui_action_menu.hpp  ui_quick_stats.hpp  ui_text.hpp  unit.hpp  unit_inventory.hpp  unit_range.hpp
lib/Lua5.4/: CMakeLists.txt  README
lib/lua-5.4.3/: CMakeLists.txt  README
src/: action_menu.cpp  action_menu.hpp  animation.hpp  animation_effect.cpp  animation_text.cpp  animation_text.hpp  animation_unit_died.cpp  animation_unit_died.hpp  animator.cpp  animator.hpp  asset_manager.cpp  asset_manager.hpp  battle_lua.cpp  battle_lua.hpp  battle_scene.cpp  battle_scene.hpp  board.cpp  board.hpp  command.cpp  command.hpp  command_attack_unit.cpp  command_attack_unit.hpp  command_move_unit.cpp  command_unit_killed.cpp  command_unit_killed.hpp  commander.cpp  commander.hpp  cursor.cpp  cursor.hpp  enums.hpp  game.cpp  game.hpp  globals.cpp  globals.hpp  item.cpp  main.cpp  map.cpp  map.hpp  scene.hpp  scene_battle.cpp  (+32 more)
src/scenes/: scene.hpp
